# hcs_NIRA_Vision

./: CMakeLists.txt  package.xml
launch/: ntarobot_3dDetection.launch.py  ntarobot_detection.launch.py
ntarobot_camera_pkg/: __init__.py  debug_node.py  detect_3d_node.py  detect_3d_node_second.py  detect_pose_objetcs.py  pos_detect.py  tracking_node.py  yolov8_node.py
src/: republish_camera.cpp  republish_depth.cpp
